--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" ?>
-<project name="projet" basedir=".">
+<project name="projet" basedir="." default="run">
 
 	<!-- set global properties for this build -->
 	<property name="src" location="src"/>
