--- a/build.xml
+++ b/build.xml
@@ -31,10 +31,15 @@
 
 	<target name="doc">
 		<mkdir dir="${doc}" />
-		<javadoc sourcefiles="${src}/*.java" destdir="${doc}" encoding="utf-8" charset="utf-8" docencoding="utf-8">
+		<javadoc sourcePath="${src}"  classpathref="classpath" destdir="${doc}"
+					encoding="utf-8" charset="utf-8" docencoding="utf-8">
+			<link href="http://docs.oracle.com/javase/7/docs/api/"/>
+			<link href="http://www.madkit.net/docs/api/"/>
+<!--		
 			<classpath>
 				<fileset dir="${lib}" includes="*.jar"/>
 			</classpath>
+-->
 		</javadoc>
 		
 	</target>
@@ -44,7 +49,7 @@
 
 		<jar basedir="${build}" destfile="${dist}/forager.jar">
 			<manifest>
-				<attribute name="Main-Class" value="Main"/>
+				<attribute name="Main-Class" value="forager.Main"/>
 			</manifest>
 			<zipgroupfileset dir="${build}" includes="*.jar" />
 		</jar>
@@ -59,7 +64,7 @@
 <!--
 		<java fork="yes" classname="Main" classpath=".:${build}:${build}/madkit-5.jar:${build}:${build}/QuadTree.jar">
 -->
-		<java fork="yes" classname="Main" classpath=".:${build}:${build}/madkit-5.jar:${build}">
+		<java fork="yes" classname="forager.Main" classpath=".:${build}:${build}/madkit-5.jar:${build}">
 		</java>
 	</target>
 	
